<resources>
    <string name="app_name">1lab_mobile</string>
    <string name="checkAgeButton">Check</string>
    <string name="ageInput">Введите возраст</string>
    <string name="messageTextView">Сообщение</string>

    <string name="calculateButton">Calculate</string>
    <string name="numberInput">Введите значение a</string>
    <string name="resultTextView">Результат</string>

    <string name="invertButton">Convert</string>
    <string name="inputString">Введите строку</string>
    <string name="outputTextView">Результат</string>
</resources>